# ash-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
src/: hello_agent.py
src/ash_cli/: __main__.py  agent.py  buffer.py  completions.py  config.py  error.py  logging.py  session.py  tools.py  tui.py
tests/: conftest.py  test_buffer.py  test_config.py  test_error.py  test_session.py
