[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ash-cli"
version = "0.1.0"
description = "CLI AI agent that outputs bash commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.0.0",
    "click>=8.0.0",
    "openai>=1.0.0",
    "pyperclip>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "readchar>=4.0.0",
]

[project.scripts]
ash-cli = "ash_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ash_cli"]

[tool.hatchling.build.targets.wheel]
packages = ["src/ash_cli"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.11",
    "types-pyperclip>=1.11.0.20260408",
    "types-pyyaml>=6.0.12.20260408",
]
